--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ allprojects {
 	group "org.springframework.boot"
 
 	repositories {
+		maven { url 'https://maven.aliyun.com/repository/public/' }
+		maven { url 'https://maven.aliyun.com/repository/spring/'}
+		maven { url 'https://maven.aliyun.com/repository/google/'}
+		maven { url 'https://maven.aliyun.com/repository/gradle-plugin/'}
+		maven { url 'https://maven.aliyun.com/repository/spring-plugin/'}
+		maven { url 'https://maven.aliyun.com/repository/grails-core/'}
+		maven { url 'https://maven.aliyun.com/repository/apache-snapshots/'}
 		mavenCentral()
 		if (version.contains('-')) {
 			maven { url "https://repo.spring.io/milestone" }
