--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,12 @@
 pluginManagement {
 	repositories {
+		maven { url 'https://maven.aliyun.com/repository/public/' }
+		maven { url 'https://maven.aliyun.com/repository/spring/'}
+		maven { url 'https://maven.aliyun.com/repository/google/'}
+		maven { url 'https://maven.aliyun.com/repository/gradle-plugin/'}
+		maven { url 'https://maven.aliyun.com/repository/spring-plugin/'}
+		maven { url 'https://maven.aliyun.com/repository/grails-core/'}
+		maven { url 'https://maven.aliyun.com/repository/apache-snapshots/'}
 		mavenCentral()
 		gradlePluginPortal()
 		maven {
@@ -23,7 +30,7 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.11.2"
-	id "io.spring.ge.conventions" version "0.0.11"
+//	id "io.spring.ge.conventions" version "0.0.11"
 }
 
 rootProject.name="spring-boot-build"
